Add a JVM client library, in Java, as a Maven module
client-jvm/ is the same client as the Python package, published as
io.sparkconnect:spark-connect-propagation-client:0.1.0. It talks to the same
unchanged server, presents the same x-user-token / x-correlation-id headers and
the same channel pre-shared key, pins user_id to the JWT subject, mints an
operation id per ExecutePlan, and shares the device-flow token cache with the
Python client byte for byte, so signing in with either signs you in for both.

  PropagatingSession.connect(remote, provider) -> SparkSession
  CorrelationId.scope() -> AutoCloseable, nests, ThreadLocal-scoped
  TokenProvider: device code, password grant, static

Writing the client twice put the two languages' constraints side by side, and
the JVM one is the easier of the two:

  * Every seam is public. SparkConnectClient.builder().interceptor(...) and
    SparkSession.builder().client(...) are public API, and Scala's static
    forwarders make both callable from plain Java. No fork, no patched private
    method - which the Python client needs for operation_id.
  * One ClientInterceptor covers every RPC shape, where PySpark needs one per
    shape and silently leaves half the traffic unauthenticated if you forget.
  * operation_id is set by rewriting the outgoing message in sendMessage:
    ordinary interceptor work, no private seam.

Two things that cost time, now in FINDINGS as #12:

  * The client jar relocates gRPC to org.sparkproject.io.grpc.*, which is NOT
    the server jar's org.sparkproject.connect.grpc.*. The two Spark artifacts
    shade the same library to two different packages, so client and server
    interceptors cannot share a superinterface.
  * Arrow reaches into java.nio reflectively, so on Java 17+ the first
    collect() dies with "Could not initialize class ...MemoryUtil" unless
    --add-opens=java.base/java.nio=ALL-UNNAMED is set. The build sets it; the
    README tells embedders they need it too.

28 unit tests (no st